--- a/client/app/src/main/res/layout/fragment_personal_posts.xml
+++ b/client/app/src/main/res/layout/fragment_personal_posts.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center"
         android:visibility="gone" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/newPostFab"
         style="?attr/floatingActionButtonSecondaryStyle"
         android:layout_width="wrap_content"
@@ -28,7 +28,8 @@
         android:layout_margin="12dp"
         android:contentDescription="Nuovo post"
         android:enabled="true"
-        android:src="@drawable/ic_outline_add_photo_24"
+        android:text="Nuovo post"
+        app:icon="@drawable/ic_outline_add_photo_24"
         app:fabSize="normal" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
