Aggiunta segnalazione e modificato stile Snackbar Da rivedere gli errori in mancanza di connettività e capire se usare o meno dei Toast per notifiche globali

--- a/client/app/src/main/res/navigation/mobile_navigation.xml
+++ b/client/app/src/main/res/navigation/mobile_navigation.xml
@@ -285,7 +285,11 @@
             android:id="@+id/navigation_dialog_report_route"
             android:name="com.unina.natourkt.feature_route.report_route.ReportRouteDialogFragment"
             android:label="fragment_report_route"
-            tools:layout="@layout/dialog_report_route" />
+            tools:layout="@layout/dialog_report_route" >
+            <argument
+                android:name="reportedRouteId"
+                app:argType="long" />
+        </dialog>
 
         <action
             android:id="@+id/action_global_navigation_post_details"
